tests/errors/fixed_number_of_args.f90
program fixed_number_of_args
    complex :: a
    a = complex(1)
end program
